[tool.poetry]
name = "approuteframework"
version = "0.1.0"
description = "App Route Framework for Flask"
authors = ["Ryan Heywood (RyanSquared) <ryan@hashbang.sh>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
